--- a/src/index.css
+++ b/src/index.css
@@ -80,10 +80,28 @@ button:focus-visible {
 
 .footer {
   position: fixed;
+  height: 100px;
   left: 0;
   bottom: 0;
   width: 100%;
-  background-color: darkblue;
+  background-color: #E9ECEF;
   color: white;
   text-align: center;
+  margin-top: 110px;
+  display: inline-block;
+  clear: both;
+}
+
+
+.background-image {
+background-image: url("../../public/plants-background.jpg");
+-webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
+.pageswithfooter {
+  margin-bottom: 115px;
+    clear: both;
 }
