--- a/src/index.css
+++ b/src/index.css
@@ -15,13 +15,13 @@
   -webkit-text-size-adjust: 100%;
 }
 
-body {
+/* body {
   margin: 0;
   display: flex;
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
-}
+} */
 
 h1 {
   font-size: 3.2em;
@@ -40,15 +40,15 @@ button {
   transition: border-color 0.25s;
 }
 
-button:hover {
+/* button:hover {
   border-color: #646cff;
 }
 
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
-}
-
+} */
+/* 
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
@@ -62,7 +62,7 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
-}
+} */
 
 .loader {
   border: 16px solid #f3f3f3; /* Light grey */
@@ -79,17 +79,18 @@ button:focus-visible {
 }
 
 .footer {
-  position: fixed;
+
   height: 100px;
   left: 0;
   bottom: 0;
   width: 100%;
-  background-color: #E9ECEF;
+  background-color: #faf0e6;
   color: white;
-  text-align: center;
   margin-top: 110px;
-  display: inline-block;
   clear: both;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: row;
 }
 
 
