--- a/src/App.css
+++ b/src/App.css
@@ -18,7 +18,7 @@ Variables
     --var-main-darkest: hsl(217, 54%, 11%);
     --var-card-dark: hsl(216, 50%, 16%);
     --var-line-dark: hsl(215, 32%, 27%);
-    --var-lightest: white;
+    --var-lightest: gray;
     
     /* Fonts */
     
