--- a/src/index.css
+++ b/src/index.css
@@ -74,8 +74,12 @@ button:focus-visible {
 }
 
 @keyframes spin {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
 
 .footer {
@@ -92,18 +96,17 @@ button:focus-visible {
   flex-direction: row;
 }
 
-
 .background-image {
-background-image: url("../../public/plants-background.jpg");
--webkit-background-size: cover;
+  background-image: url("../../public/plants-background.jpg");
+  -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
 }
 
 .pageswithfooter {
-  margin-bottom: 115px;
-    clear: both;
+  margin-bottom: 200px;
+  clear: both;
 }
 
 .profile-info {
@@ -111,4 +114,10 @@ background-image: url("../../public/plants-background.jpg");
   flex-direction: column;
   align-items: center;
   color: gray;
+}
+
+.update-profile {
+    margin-bottom: 200px;
+      clear: both;
+      /* background-image: url('../../public/bike-plant-backgroundimg.jpg'); */
 }
