--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  background-color: white;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -117,6 +117,27 @@ button:focus-visible {
 }
 
 .update-profile {
-    margin-bottom: 200px;
-      clear: both;
+  margin-bottom: 200px;
+  clear: both;
+}
+
+.profile-page {
+  background-image: url("../../public/bike-plant-backgroundimg.jpg");
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  width: 100%;
+  height: 100%;
+  clear: both;
+  display: flex;
+  justify-content: center;
+   align-items: center;
+}
+
+.profile-info-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
