--- a/src/index.css
+++ b/src/index.css
@@ -153,5 +153,8 @@ button:focus-visible {
   margin: 20px;
   flex-direction: row;
   justify-content: space-between;
+}
 
+.profile-user-data {
+  color: gray;
 }
